--- a/public/test.html
+++ b/public/test.html
@@ -44,6 +44,7 @@
           <p class="card-text">Nvidia: \"Strong demand in the cryptocurrency market exceeded our expectations.\"</p>
           <hr>
           <p class="card-text article-date text-muted">15 February 2018, 1:45pm</p>
+          <!-- Begin comments modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -64,8 +65,12 @@
                   <hr>
                   <form>
                     <div class="form-group">
-                      <label for="message-text" class="col-form-label">Note:</label>
-                      <textarea class="form-control" id="message-text"></textarea>
+                      <label for="new-title">Title</label>
+                      <input type="text" class="form-control" id="new-title" placeholder="Title">
+                    </div>
+                    <div class="form-group">
+                      <label for="new-body" class="col-form-label">Your Comment:</label>
+                      <textarea class="form-control" id="new-body"></textarea>
                     </div>
                   </form>
                 </div>
@@ -76,6 +81,8 @@
               </div>
             </div>
           </div>
+          <!-- End comments modal -->
+
           <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal">Comment on article</button>
         </div>
       </div>
